styles.css
/* ... */
  .carousel::-webkit-scrollbar-track {
    border-radius: 6px;
  }

  .carousel::-webkit-scrollbar-thumb {
    background: linear-gradient(90deg, transparent, rgba(244, 108, 33, 0.7), transparent);
    border-radius: 6px;
  }

  .carousel::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(90deg, transparent, rgba(61, 207, 194, 0.7), transparent);
  }

  /* Hide scrollbar on touchscreen devices*/
  @media (hover: none) and (pointer: coarse) {
  .carousel {
    scrollbar-width: none;  /* Firefox */
    -ms-overflow-style: none;  /* IE 10+ */
  }
  .carousel::-webkit-scrollbar {
    display: none;  /* Chrome*/
  }
}




  @keyframes glowPulse {
    0%, 100% {
      text-shadow: 0 0 10px  #FF46A299;
    }
    50% {
      text-shadow: 0 0 20px  #FF46A2FF;
    }
  }

  @keyframes glowPulse2 {
    0%, 100% {
      box-shadow: 0 0 80px 0 var(--dual1);
    }
    25% {
      box-shadow: 0 0 15px var(--Hotpink);
    }
    50% {
      box-shadow: 0 0 80px 0 var(--Turkis);
    }
    75% {
      box-shadow: 0 0 15px 0 var(--Orange);
    }
  }

    .youtube-link:hover {
      color: var(--Hotpink);
      .dualLagNavn{
        margin-top: 15px;
        font-size: 49px;
      }
    }

    @media (max-width: 2000px) {
      .dualLagNavn {
        margin-top: 20px;
        font-size: 50px;
      }
    }

    @media (max-width: 1700px) {
      .MainText {
      font-size: 170%;

    }

    }
    @media (max-width: 1700px) {

      .paraText{
        font-size: 60%;
      }

      .dualContainers{
        width: 100%;
        height: 100%;
        padding: 10px;
      }

      .dualLagNavn{
        margin-top: 15px;
        font-size: 49px;
      }


      .content {
        margin-top: 8%;
        padding: 0 10%;
      }
    }

    @media (max-width: 1500px) {

      .dualContainers{
        width: 100%;
        height: 100%;
        padding: 10px;
      }

      .dualLagNavn{
        margin-top: 15px;
        font-size: 43px;
      }
    }
    @media (max-width: 1400px) {
      .dualLagNavn{
        margin-top: 10px;
        font-size: 41px;
      }
    }
    @media (max-width: 1300px) {
      .dualContainers{
        width: 100%;
        height: 100%;
        padding: 10px;
      }

      .dualLagNavn{
        margin-top: 10px;
        font-size: 40px;
      }

      .content {
        margin-top: 10%;
        width: 100%;
      }
    }
    @media (max-width: 1245px) {
      .dualLagNavn{
        margin-top: 10px;
        font-size: 37px;
      }
    }

  @media (max-width: 1024px) {
    
    .MainText {
      font-size: 140%;
      padding-left: 10%;
      padding-right: 10%;
      height: auto;
    }
    .MainTextSemi{
      padding-right: 10%;
      padding-left: 10%;
      padding-top: 2%;
      padding-bottom: 4%;
      height: auto;

      font-size: 100%;
      font-weight: 800;
      text-align: center;
    }
  
    .content {
      width: 100%;
      flex-flow: column;
      padding: 0 5%;
    }

    .dualContainers{
      width: 100%;
      height: 100%;
      padding: 5px;
    }

    .dualLagNavn{
      margin-top: 7px;
      font-size: 30px;
    }

    .timerFit{
      width: 100%;
    }

    .timerNumbKeep{
      width: 25%;
    }

    #days{
      font-size: 140%;
    }

    #hours{
      font-size: 140%;
    }

    #min{
      font-size: 140%;
    }

    #sec{
      font-size: 140%;
    }
  
    .navbar {
      padding: 0.5rem 1rem;
    }
  
    .logo {
      font-size: 1.2rem;
    }
  }
  @media (max-width: 850px) {
      .dualLagNavn{
      margin-top: 5px;
      font-size: 27px;
    }
    #no-wrap{
        font-size: 2.6vw; 
    }
  }
  
  @media (max-width: 768px) {
    
    .MainText {
      font-size: 120%;
      padding-left: 5%;
      padding-right: 5%;
    }
    .MainTextSemi{
      padding-right: 10%;
      padding-left: 10%;
      padding-top: 0%;
      padding-bottom: 4%;
      height: auto;

      font-size: 90%;
      font-weight: 700;
      text-align: center;
    }
  
    .content {
      width: 100%;
      flex-flow: column;
      align-items: center;
      margin-top: 12%;
    }
  
    .navbar {
      padding: 0.5rem;
    }
  
    .logo {
      font-size: 1rem;
    }

    .paraText{
      font-weight: 700;
      font-size: 25px;
      padding-left: 10px;
      padding-right: 10px;
    }

    .dualLagNavn{
      margin-top: 9px;
      font-size: 31px;
    }
    .dualContainers{
      width: 100%;
      height: 100%;
      padding: 2px;
    }

    .timerFit{
      font-size: smaller;
    }
  }

  @media (max-width: 700px) {
    .youtube-link {
      text-decoration: none;
      font-size: 130%;
    }

    #days{
      font-size: 120%;
    }

    #hours{
      font-size: 120%;
    }

    #min{
      font-size: 120%;
    }

    #sec{
      font-size: 120%;
    }

    #backgroundTex {
      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="%23333" stroke-width="0.5" opacity="0.08"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
    }

    .carousel {
    scrollbar-width: none;  /* Firefox */
    -ms-overflow-style: none;  /* IE 10+ */
  }
  .carousel::-webkit-scrollbar {
    display: none;  /* Chrome, Safari, Opera */
  }
  }
/* ... */

